# chat

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: docker-tests.yml
entity/src/: messages.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_rooma_and_messages.rs  m20220101_000001_rooms.rs  m20221011_174636_mesages.rs  m20221011_174636_messages.rs  main.rs
settings/: Cargo.toml
settings/src/: Default.json  lib.rs
src/: chat.rs  chat_room.rs  main.rs
src/api/: messages.rs  websocket.rs
src/app/: converters.rs  cqrs.rs  mod.rs
src/commands/: add_message_to_room.rs  get_or_create_room.rs  mod.rs
src/domain/: chat.rs  chat_room.rs  circle_buffer.rs  mod.rs
src/entities/: messages.rs  mod.rs  prelude.rs  rooms.rs
src/settings/: mod.rs
