[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-log = "0.1.3"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.9.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]